--- a/css/application.scss
+++ b/css/application.scss
@@ -1,26 +1,65 @@
+
+
 body{
   font-family: 'Cutive Mono', monospace;
   font-family: 'Oxygen', sans-serif;
+  font-family: 'Source Code Pro', monospace;
+
+  h1 {
+    font-family: 'Bangers', curive;
+    font-size: 52px;
+  }
+
+  p {
+    font-family: 'Source Code Pro', monospace;
+  }
+
+  a{
+    text-decoration: none;
+    color: rgb(16, 16, 16);
+}
+
+  a:hover{
+      color: black;
+      text-decoration: underline;
+  }
+  
+}
+
+/*** BOTTONI ***/
+
+.botton-primary {
+  font-family: 'Bangers', curive;
+  background-color: #fff;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-size: 20px;
+  transition: 0.3s;
+  border-color: #000;
+  border-width: 2px;
+}
+
+.botton-primary:hover {
+  background-color: #000;
+  color: #fff
+
+}
+
+/*** BOX ***/
+
+.box-eventi {
+  display: flex;
 }
 
 .rotatelogo{
     animation: rotation 10s infinite linear;
 }
 
-a{
-    text-decoration: none;
-    color: rgb(16, 16, 16);
-}
-
-a:hover{
-    color: black;
-    text-decoration: underline;
-}
 
 .list .questions{
   font-weight: bold;
   font-size: 36px;
-  text-transform: uppercase;
+  font-family: 'Bangers', curive;
 }
 
 @keyframes rotation {
@@ -31,3 +70,4 @@ a:hover{
       transform: rotate(359deg);
     }
   }
+
