--- a/scss/index.scss
+++ b/scss/index.scss
@@ -14,6 +14,8 @@ body{
     font-family: 'Source Code Pro', monospace;
   }
 
+  
+
   a{
     text-decoration: none;
     color: rgb(16, 16, 16);
@@ -26,10 +28,14 @@ body{
   
 }
 
+.banner{
+  background-color: red;
+}
+
 /*** UTILS ***/
 
 .text-details p {
-  paddind-left: 20px!important;
+  padding-left: 20px !important;
 }
 
 .title {
@@ -81,4 +87,7 @@ body{
       transform: rotate(359deg);
     }
   }
+
+
+@import './Commons/commons.scss';
 
