--- a/css/application.scss
+++ b/css/application.scss
@@ -1,5 +1,4 @@
 
-
 body{
   font-family: 'Cutive Mono', monospace;
   font-family: 'Oxygen', sans-serif;
@@ -17,12 +16,15 @@ body{
   a{
     text-decoration: none;
     color: rgb(16, 16, 16);
-}
-
-  a:hover{
+    &:hover{
       color: black;
       text-decoration: underline;
+      cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🌊</text></svg>")
+      16 0, auto;
+    }
   }
+
+ 
   
 }
 
@@ -35,6 +37,10 @@ body{
 .title {
   text-align: center;
   margin-top: 20px;
+}
+
+ul {
+  padding-left: 0px
 }
 /*** BOTTONI ***/
 
