--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,11 @@ body a:hover {
 }
 
 /*** UTILS ***/
+
+.material-symbols-outlined {
+  font-weight: bold!important;
+}
+
 .text-details p {
   padding-left: 20px !important;
 }
@@ -83,6 +88,7 @@ body a:hover {
   padding: 5px;
   font-weight: bold;
   font-size: 18px;
+  margin-bottom: 50px
 }
 .banner p {
   animation: loop 20s linear infinite;
